# micoservice-project-rust-bootcamp-

./: Cargo.toml  README.md  auth.Dockerfile  build.rs  docker-compose.yaml  health.Dockerfile
.devcontainer/: devcontainer.json
.github/workflow/: prod.yaml  prod.yml
proto/: authentication.proto
src/auth-service/: auth.rs  main.rs  sessions.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
